criação-arquivo-css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Breakout</title>
-        <link rel="stylesheet" href="breakout.css">
+        <link rel="stylesheet" href="tyles.css">
         <script src="script.js"></script>
     </head>
 
