--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Breakout</title>
-        <link rel="stylesheet" href="tyles.css">
-        <script src="script.js"></script>
-    </head>
-
-    <body>
-        <canvas id="board"></canvas>
-    </body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo em JavaScript</title>
+    <style>
+        /* Exemplo de estilo para o canvas */
+        #board {
+            border: 1px solid #000;
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="board"></canvas>
+    <!-- Importa o script -->
+    <script src="script.js"></script>
+</body>
 </html>
