--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo em JavaScript</title>
-    <style>
-        /* Exemplo de estilo para o canvas */
-        #board {
-            border: 1px solid #000;
-            display: block;
-            margin: 0 auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jogo em JavaScript</title>
+  <link rel="stylesheet" href="css/tyles.css">
 </head>
 <body>
-    <canvas id="board"></canvas>
-    <!-- Importa o script -->
-    <script src="script.js"></script>
+  <canvas id="board"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
