--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jogo em JavaScript</title>
-  <link rel="stylesheet" href="css/tyles.css">
-</head>
-<body>
-  <canvas id="board"></canvas>
-  <script src="script.js"></script>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport", content="width=device-width, initial-scale=1.0">
+        <title>Breakout</title>
+        <link rel="stylesheet" href="breakout.css">
+        <script src="breakout.js"></script>
+    </head>
+
+    <body>
+        <canvas id="board"></canvas>
+    </body>
 </html>
