--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Breakout</title>
-        <link rel="stylesheet" href="breakout.css">
-        <script src="breakout.js"></script>
+        <title>Jogo Web</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="scripts.js"></script>
     </head>
 
     <body>
